--- a/src/css/main.css
+++ b/src/css/main.css
@@ -199,3 +199,81 @@ body {
   font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=main.css.map */
+
+/* Yotpo CSS */
+.yotpo-main-widget-layout.yotpo-align-text * {
+    font-family: 'Montserrat',sans-serif !important;
+    border-radius: 0 !important;
+}
+.yotpo-reviewer .yotpo-reviewer-image text.yotpo-avatar-initials-text {
+    font-size: 15px;
+}
+[class*="yotpo-display-"][class*="yotpo-device-"][style] .yotpo-review .yotpo-review-center-panel .yotpo-review-content .yotpo-read-more-text {
+    display: inline;
+    margin-right: 5px;
+}
+
+[class*="yotpo-display-"][class*="yotpo-device-"][style] .yotpo-review .yotpo-review-center-panel .yotpo-read-more {
+    margin: 0;
+}
+[class*="yotpo-display-"][class*="yotpo-device-"].yotpo-device-mobile .modal-backdrop.yotpo-media-modal {
+    background-color: #fff;
+    overflow-y: scroll;
+}
+
+[class*="yotpo-display-"][class*="yotpo-device-"].yotpo-device-mobile .modal-backdrop.yotpo-media-modal #yotpo-modal {
+    overflow-y: unset;
+}
+.yotpo-reviews-list .yotpo-review .yotpo-review-center-panel .yotpo-thumbnail-container.clickable-thumbnails.yotpo-review-thumbnail-container {
+    order: 7;
+    margin-top: 15px;
+}
+.yotpo-display-s .yotpo-main-layout .yotpo-layout-header-wrapper .yotpo-bottom-line .yotpo-star-distribution .yotpo-star-distribution-bar {
+    margin: 0 10px;
+}
+div#newReviewFormModal div#yotpo-basic-modal .modal-close-btn-wrapper {
+    z-index: 100000000000000000 !important;
+}
+.yotpo-review .yotpo-review-center-panel .yotpo-comment.yotpo-review-comment .yotpo-custom-icon.yotpo-comment-avatar {
+    width: 100px;
+    height: 17px;
+    margin-top: 6px;
+}
+.yotpo-reviews-main-widget.yotpo-main-widget-layout.yotpo-widget-clear.yotpo-device-mobile.yotpo-display-s div#newReviewFormModal div#yotpo-basic-modal {
+    width: unset;
+}
+.yotpo-display-s .yotpo-header-lower-wrapper .yotpo-bottom-line-question-wrapper-horizontal .yotpo-review-question-wrapper .yotpo-custom-questions-range-question.yotpo-review-range-question-top {
+    justify-content: center;
+}
+@media only screen and (max-width: 400px) {
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin .yotpo-review-votes-text {
+    font-size: 13px;
+}
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin .yotpo-review-votes-icons-container svg.yotpo-review-votes-icon-up {
+    width: 15px;
+}
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin .yotpo-review-votes-icons-container svg.yotpo-review-votes-icon-down {
+    width: 15px;
+}
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin .yotpo-review-votes-icons-container .yotpo-review-votes-number {
+    font-size: 14px;
+}
+}
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin {
+    justify-content: center;
+}
+@media only screen and (max-width: 350px) {
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin .yotpo-review-votes-text {
+    font-size: 11px;
+}
+  .yotpo-display-s .yotpo-main-layout.yotpo-main-reviews-widget .yotpo-clear-filters-container.yotpo-clear-filters-device {
+    display: block;
+}
+.yotpo-display-s div#yotpo-reviews-container .yotpo-reviews-list .yotpo-review-votes-wrapper.top-margin {
+    justify-content: center;
+    min-width: 210px;
+}
+}
+.yotpo-display-s .yotpo-header-container .yotpo-header-lower-wrapper .yotpo-bottom-line-question-wrapper-horizontal {
+    width: 100% !important;
+}
