--- a/src/css/main.css
+++ b/src/css/main.css
@@ -201,8 +201,17 @@ body {
 /*# sourceMappingURL=main.css.map */
 
 /* Yotpo CSS */
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v34/1Ptug8zYS_SKggPNyC0ITw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 .yotpo-main-widget-layout.yotpo-align-text * {
-    font-family: 'Montserrat',sans-serif !important;
+    font-family: 'Raleway',sans-serif !important;
     border-radius: 0 !important;
 }
 .yotpo-reviewer .yotpo-reviewer-image text.yotpo-avatar-initials-text {
